--- a/CMakelists.txt
+++ b/CMakelists.txt
@@ -1,4 +1,5 @@
 cmake_minimum_required(VERSION 3.16)
-project(catch_test)
-set(CMAKE_CXX_STANDARD 14)
-add_executable(catch_test yesdb.cpp catch.hpp)
+set(CMAKE_CXX_STANDARD 17)
+project(yesdb)
+add_subdirectory(src)
+add_subdirectory(tests)
