--- a/tests/CMakelists.txt
+++ b/tests/CMakelists.txt
@@ -1,4 +1,5 @@
-include_directories(../third_party/catch)
-add_executable(catch_test yesdb.cpp)
+# include_directories(../third_party/catch)
+include_directories(../src/include)
+add_executable(main main.cpp)
 
 add_executable(open_test open.cpp)
