fix: use cmake manage the source files

--- a/CMakelists.txt
+++ b/CMakelists.txt
@@ -1,5 +1,25 @@
 cmake_minimum_required(VERSION 3.16)
+project(yesdb 
+        VERSION 2023.8
+        DESCRIPTION "a key-value storage engine."
+        LANGUAGES C CXX
+        )
 set(CMAKE_CXX_STANDARD 17)
-project(yesdb)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
+set(CMAKE_INSTALL_PREFIX ${PROJECT_SOURCE_DIR}/install)
+# Includes.
+set(BUSTUB_SRC_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/src/include)
+set(BUSTUB_THIRD_PARTY_INCLUDE_DIR
+        ${PROJECT_SOURCE_DIR}/third_party
+        ${PROJECT_SOURCE_DIR}/third_party/catch/
+        )
+
+include_directories(${BUSTUB_SRC_INCLUDE_DIR} ${BUSTUB_THIRD_PARTY_INCLUDE_DIR})
+include_directories(BEFORE src) # This is needed for gtest.
+
+
+
 add_subdirectory(src)
 add_subdirectory(tests)
