--- a/src/storage/CMakelists.txt
+++ b/src/storage/CMakelists.txt
@@ -1,1 +1,9 @@
-include_directories(./include)
+add_library(
+    yesdb_storage 
+    OBJECT
+    server.cpp
+    )
+
+set(ALL_OBJECT_FILES
+    ${ALL_OBJECT_FILES} $<TARGET_OBJECTS:yesdb_storage>
+    PARENT_SCOPE)
