--- a/src/CMakelists.txt
+++ b/src/CMakelists.txt
@@ -1,24 +1,26 @@
-add_subdirectory(utils)
 add_subdirectory(storage)
 # collect all object files and generate static lib
 add_library(yesdb STATIC ${ALL_OBJECT_FILES})
 
 
 set(YESDB_LIBS
-        yesdb_utils
         yesdb_storage
         )
 
 find_package(Threads REQUIRED)
+find_library(CRC_LIBS
+        NAMES crc32c
+        PATHS /urs/local/lib
+        REQUIRED)
 
-set(YESDB_THIRDPARTY_LIBS
-        Threads::Threads
-        )
 
 target_link_libraries(
         yesdb
         ${YESDB_LIBS}
-        ${YESDB_THIRDPARTY_LIBS}
+        Threads::Threads
+        ${CRC_LIBS}
 )
-add_executable(yesdb_server main.cpp)
-target_link_libraries(yesdb_server PRIVATE yesdb)
+
+
+#add_executable(yesdb_server main.cpp)
+#target_link_libraries(yesdb PRIVATE yesdb)
