--- a/test/CMakelists.txt
+++ b/test/CMakelists.txt
@@ -8,6 +8,11 @@
  find_library(CATCH2MAIN_LIBS Catch2Main /Users/yaojun/MyInstall/catch_install/lib REQUIRED)
  find_library(ZSTD_LIBS zstd /opt/homebrew/Cellar/zstd/1.5.5/lib REQUIRED)
  file(GLOB_RECURSE SRC_FILES "${CMAKE_CURRENT_LIST_DIR}/*.cpp")
+# art
+ include_directories(../third_party/art)
+  include_directories(../third_party/art/art)
+ #picobench
+ include_directories(../third_party/picobench)
 
  foreach (test_source ${SRC_FILES})
      get_filename_component(test_filename ${test_source} NAME)
