--- a/.github/workflows/yesdb.yml
+++ b/.github/workflows/yesdb.yml
@@ -1,19 +1,31 @@
-name: C/C++ CI
+name: Unbuntu_CI
 
 on:
   push:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
-  schedule:
-    - cron: '30 2 * * *'
+
+env:
+  BUILD_TYPE: Release
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v3
-    - name: cmake
-      run: mkdir build && cd build && cmake .. && make -j 8
+
+    - name: Set Limit
+      run: |
+          sudo prlimit --pid $$ --nofile=1048576:1048576
+          sudo sysctl fs.inotify.max_user_instances=1280
+          sudo sysctl fs.inotify.max_user_watches=655360
+    - name: Clone Submodule
+      run: git submodule update --init --recursive
+
+    - name: Configure CMake
+      run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
+
+    - name: Build
+      run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
