fix: cmake source compile and ci

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,7 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_BUILD_TYPE DEBUG)
 
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
+set(THIRD_PARTY_PATH ${CMAKE_CURRENT_BINARY_DIR}/third-party)
 
 include_directories(${PROJECT_SOURCE_DIR}/src/include)
 include_directories(${PROJECT_SOURCE_DIR}/third_party)
@@ -18,9 +19,9 @@ include(gtest)
  include(crc32c)
  include(zstd)
  # headers 
- include_directories(${GTEST_INCLUDE_DIRS})
- include_directories(${CRC32C_INCLUDE_DIRS})
- include_directories(${ZSTD_INCLUDE_DIRS})
+ include_directories(${GTEST_INCLUDE_DIR})
+ include_directories(${CRC32C_INCLUDE_DIR})
+ include_directories(${ZSTD_INCLUDE_DIR})
 
 add_subdirectory(src)
 add_subdirectory(test)
