--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,6 +1,5 @@
  cmake_minimum_required(VERSION 3.5)
  set(CMAKE_CXX_STANDARD 17)
- project(db_test)
  # set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/../cmake")
  
  # bin
@@ -9,7 +8,7 @@
  add_executable(zstd_test third_party/zstd_test.cpp)
  add_executable(db_bench db_bench.cpp)
  # libraries
- target_link_libraries(gtest_test ${GTEST_LIBRARIES})
+ target_link_libraries(gtest_test  ${GTEST_MAIN_LIBRARIES} ${GTEST_LIBRARIES})
  target_link_libraries(crc32c_test ${CRC32C_LIBRARIES})
  target_link_libraries(zstd_test ${ZSTD_LIBRARIES})
  # db_bench
