--- a/.github/workflows/yesdb.yml
+++ b/.github/workflows/yesdb.yml
@@ -16,16 +16,11 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
-    - name: Set Limit
-      run: |
-          sudo prlimit --pid $$ --nofile=1048576:1048576
-          sudo sysctl fs.inotify.max_user_instances=1280
-          sudo sysctl fs.inotify.max_user_watches=655360
     - name: Clone Submodule
       run: git submodule update --init --recursive
 
     - name: Configure CMake
-      run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
+      run: cmake -B ${{github.workspace}}/build 
 
     - name: Build
-      run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
+      run: cmake --build ${{github.workspace}}/build
