--- a/.github/workflows/yesdb.yml
+++ b/.github/workflows/yesdb.yml
@@ -20,7 +20,7 @@ jobs:
       run: git submodule update --init --recursive
 
     - name: Configure CMake
-      run: cmake -B ${{github.workspace}}/build 
+      run: pwd && cmake --version &&cmake -B ${{github.workspace}}/build 
 
     - name: Build
       run: cmake --build ${{github.workspace}}/build
