--- a/.github/workflows/Unbuntu.yml
+++ b/.github/workflows/Unbuntu.yml
@@ -19,8 +19,14 @@ jobs:
     - name: Clone Submodule
       run: git submodule update --init --recursive
 
-    - name: Configure CMake
-      run: pwd && cmake --version &&cmake -B ${{github.workspace}}/build 
+    - name: config
+      env:
+        CC: clang
+        CXX: clang++
+      run: mkdir build && cd build && cmake ..
 
-    - name: Build
-      run: cmake --build ${{github.workspace}}/build
+    - name: build
+      run: make -j 2
+
+    - name: test
+      run: cd build && ctest --output-on-failure -j 2
