--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -16,15 +16,12 @@ jobs:
 
     - name: Clone Submodule
       run: git submodule update --init --recursive
-
-    - name: config
-      env:
-        CC: clang
-        CXX: clang++
-      run: mkdir build && cd build && cmake ..
-
-    - name: build
-      run: cd build && make -j 2
-
-    - name: test
-      run: cd build && ctest --output-on-failure -j 2
+      
+    - name: Configure CMake
+        # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
+        # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
+      run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
+  
+    - name: Build
+        # Build your program with the given configuration
+      run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
