--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,5 @@
 cmake_minimum_required(VERSION 3.5)
-project(yesdb
-        VERSION 2023.8
-        DESCRIPTION "a key-value storage engine."
-        LANGUAGES C CXX
-        )
+project(yesdb C CXX)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
@@ -14,14 +10,27 @@ set(THIRD_PARTY_PATH ${CMAKE_CURRENT_BINARY_DIR}/third-party)
 
 include_directories(${PROJECT_SOURCE_DIR}/src/include)
 include_directories(${PROJECT_SOURCE_DIR}/third_party)
-
-# include(gtest)
+enable_testing()
+include(gtest)
 #  include(crc32c)
 #  include(zstd)
-# headers 
-#  include_directories(${CRC32C_INCLUDE_DIR})
-#  include_directories(${ZSTD_INCLUDE_DIR})
+set(DYNAMIC_LIB
+    ${GTEST_MAIN_LIBRARIES}
+    ${GTEST_LIBRARIES}
+    Threads::Threads
+    )
+
+set(DEPEND_LIBS
+    gtest
+    )
 
 # add_subdirectory(src)
 # add_subdirectory(test)
-add_executable(main test/main.cpp)
+set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
+
+add_executable(gtest_test test/third_party/gtest_test.cpp)
+add_dependencies(gtest_test ${DEPEND_LIBS})
+
+target_link_libraries(gtest_test ${DYNAMIC_LIB})
+
+add_test(NAME mytest COMMAND $<TARGET_FILE: gtest_test>)
