--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -19,7 +19,7 @@ jobs:
       
     - name: Configure CMake
       
-      run: cmake -B build
+      run: cmake -B build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
   
     - name: Build
       run: cmake --build build -j 2
