--- a/src/storage/CMakeLists.txt
+++ b/src/storage/CMakeLists.txt
@@ -1,11 +1,5 @@
-add_library(
-        yesdb_storage
-        OBJECT
-        server.cpp
-        common.cpp
-)
-
+add_library(yesdb_storage OBJECT server.cpp common.cpp)
 
 set(ALL_OBJECT_FILES
-        ${ALL_OBJECT_FILES} $<TARGET_OBJECTS:yesdb_storage>
-        PARENT_SCOPE)
+    ${ALL_OBJECT_FILES} $<TARGET_OBJECTS:yesdb_storage>
+    PARENT_SCOPE)
