--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,32 +5,30 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_BUILD_TYPE DEBUG)
 
-set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
-set(THIRD_PARTY_PATH ${CMAKE_CURRENT_BINARY_DIR}/third-party)
-
-include_directories(${PROJECT_SOURCE_DIR}/src/include)
-include_directories(${PROJECT_SOURCE_DIR}/third_party)
-enable_testing()
-include(gtest)
-#  include(crc32c)
-#  include(zstd)
-set(DYNAMIC_LIB
-    ${GTEST_MAIN_LIBRARIES}
-    ${GTEST_LIBRARIES}
-    Threads::Threads
-    )
-
-set(DEPEND_LIBS
-    gtest
-    )
-
-# add_subdirectory(src)
-# add_subdirectory(test)
 set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
 
-add_executable(gtest_test test/third_party/gtest_test.cpp)
-add_dependencies(gtest_test ${DEPEND_LIBS})
+include(FetchContent)
+# libcuckoo
+FetchContent_Declare(
+  libcuckoo
+  GIT_REPOSITORY https://github.com/efficient/libcuckoo.git
+  GIT_TAG v0.3.1)
+FetchContent_MakeAvailable(libcuckoo)
+# crc32c
+FetchContent_Declare(
+  crc32c
+  GIT_REPOSITORY https://github.com/google/crc32c.git
+  GIT_TAG 1.1.2)
+FetchContent_MakeAvailable(crc32c)
+# # zstd FetchContent_Declare( zstd GIT_REPOSITORY
+# https://github.com/facebook/zstd.git GIT_TAG v1.5.5)
+# FetchContent_MakeAvailable(zstd)
 
-target_link_libraries(gtest_test ${DYNAMIC_LIB})
+include_directories(src/include)
+# add_subdirectory(src)
 
-add_test(NAME mytest COMMAND $<TARGET_FILE: gtest_test>)
+find_package(Threads REQUIRED)
+
+add_executable(db_server main.cpp)
+target_link_libraries(db_server yesdb_ crc32c libcuckoo Threads::Threads)
+# target_include_directories(db_server PRIVATE ${crc32c_SOURCE_DIR}/crc32c)
