feat: add db_server

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,7 +1,13 @@
-add_library(yesdb_ STATIC storage/common.cpp storage/server.cpp)
+add_library(yesdb STATIC storage/common.cpp storage/server.cpp)
 find_package(Threads REQUIRED)
-target_link_libraries(yesdb_ PRIVATE crc32c libcuckoo Threads::Threads)
 
-include_directories(include)
+set(LIBS ${ZSTD_LIBRARIES} ${CRC32C_LIBRARIES} Threads::Threads)
+set(DEPS zstd crc32c)
+set(INCLUDES ${CRC32C_INCLUDE_DIR} ${GTEST_INCLUDE_DIR} ${ZSTD_INCLUDE_DIR}
+             include/)
+target_link_libraries(yesdb PUBLIC ${LIBS})
+add_dependencies(yesdb ${DEPS})
+target_include_directories(yesdb PUBLIC ${INCLUDES})
+
 add_executable(db_server main.cpp)
-target_link_libraries(db_server PRIVATE yesdb_)
+target_link_libraries(db_server PRIVATE yesdb)
